# oeAware-tune

./: README.en.md  README.md
example/: CMakeLists.txt
example/adapt/: CMakeLists.txt  adapt.cpp
example/include/dep_plugin/: scenario.h
example/include/frame/: common.h
example/tune/: CMakeLists.txt  tune.cpp  tune.h
include/: interface.h
thread_tune/: CMakeLists.txt  thread_tune.conf  thread_tune.cpp  thread_tune.h
